// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jsx_same_line.js 1`] = `
====================================options=====================================
jsxBracketSameLine: true
jsxBracketSpacing: false
parsers: ["flow", "babylon", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div
  // comment
>
  {foo}
</div>;

<div
  // comment
  attr="foo"
>
  {foo}
</div>;

<div
  attr="foo" // comment
>
  {foo}
</div>;

<div
  attr="foo"
  // comment
>
  {foo}
</div>;

<br // comment
/>;

=====================================output=====================================
<div
// comment
>
  {foo}
</div>;

<div
  // comment
  attr="foo">
  {foo}
</div>;

<div
  attr="foo" // comment
>
  {foo}
</div>;

<div
  attr="foo"
  // comment
>
  {foo}
</div>;

<br // comment
/>;

================================================================================
`;

exports[`jsx_same_line.js 2`] = `
====================================options=====================================
jsxBracketSameLine: true
jsxBracketSpacing: true
parsers: ["flow", "babylon", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div
  // comment
>
  {foo}
</div>;

<div
  // comment
  attr="foo"
>
  {foo}
</div>;

<div
  attr="foo" // comment
>
  {foo}
</div>;

<div
  attr="foo"
  // comment
>
  {foo}
</div>;

<br // comment
/>;

=====================================output=====================================
<div
// comment
>
  { foo }
</div>;

<div
  // comment
  attr="foo">
  { foo }
</div>;

<div
  attr="foo" // comment
>
  { foo }
</div>;

<div
  attr="foo"
  // comment
>
  { foo }
</div>;

<br // comment
/>;

================================================================================
`;
